compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case__pipe.snap
---
source: compiler-core/src/nix/tests/case.rs
expression: "\nfn go(x, f) {\n  case x |> f {\n    0 -> 1\n    _ -> 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x, f) {
  case x |> f {
    0 -> 1
    _ -> 2
  }
}


----- COMPILED NIX
let
  go =
    x: f: let _pat' = let _pipe = x; in f _pipe; in if _pat' == 0 then 1 else 2;
in
{ }
