compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case__pointless.snap
---
source: compiler-core/src/nix/tests/case.rs
expression: "\nfn go(x) {\n  case x {\n    _ -> x\n  }\n}\n"
---
let go = x: x; in { }
