compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case__single_clause_variables.snap
---
source: compiler-core/src/nix/tests/case.rs
expression: "\npub fn main() {\n  let text = \"first defined\"\n  case \"defined again\" {\n    text -> Nil\n  }\n  let text = \"a third time\"\n  Nil\n}\n"
---
let
  main =
    { }:
    let
      text = "first defined";
      _' = let _pat' = "defined again"; in let text'1 = _pat'; in null;
      text'1 = "a third time";
    in
    builtins.seq _' null;
in
{ inherit main; }
