compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case__single_clause_variables_assigned.snap
---
source: compiler-core/src/nix/tests/case.rs
expression: "\npub fn main() {\n  let text = \"first defined\"\n  let other = case \"defined again\" {\n    text -> Nil\n  }\n  let text = \"a third time\"\n  Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let text = "first defined"
  let other = case "defined again" {
    text -> Nil
  }
  let text = "a third time"
  Nil
}


----- COMPILED NIX
let
  main =
    { }:
    let
      text = "first defined";
      other = let _pat' = "defined again"; in let text'1 = _pat'; in null;
      text'1 = "a third time";
    in
    null;
in
{ inherit main; }
