compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case__slicing_is_handled_properly_with_multiple_branches.snap
---
source: compiler-core/src/nix/tests/case.rs
expression: "\npub fn main() {\n  case \"12345\" {\n    \"0\" <> rest -> rest\n    \"123\" <> rest -> rest\n    _ -> \"\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  case "12345" {
    "0" <> rest -> rest
    "123" <> rest -> rest
    _ -> ""
  }
}


----- COMPILED NIX
let
  inherit (builtins.import ./../gleam.nix) strHasPrefix;
  
  main =
    { }:
    let
      _pat' = "12345";
    in
    if strHasPrefix "0" _pat' then
      let
        rest = (builtins.substring 1 (-1) _pat');
      in
      rest
    else if strHasPrefix "123" _pat' then
      let
        rest = (builtins.substring 3 (-1) _pat');
      in
      rest
    else "";
in
{ inherit main; }
